# APS

./: CMakeLists.txt  README.md  buffer.cpp  buffer.h  client.cpp  client.h  expert.cpp  expert.h  globals.cpp  globals.h  main.cpp  placement_dispatcher.cpp  placement_dispatcher.h  request.cpp  request.h  selection_dispatcher.cpp  selection_dispatcher.h  simulation.cpp  simulation.h  КУРСОВАЯ_ФЕСЕНКО_ИН_5130904_20104.docx
